--- a/ShoppingList/appsettings.json
+++ b/ShoppingList/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ShoppingListContext": "Server=(localdb)\\mssqllocaldb;Database=ShoppingListContext-56454f56-50bb-47cc-a5c2-6c8e446ef189;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ShoppingListContext": "Server=shoppinglistdb.cvnot61g3r75.us-west-2.rds.amazonaws.com;Database=shoppinglistdb;User Id=admin;Password=srujana123"
   }
 }
